--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
-        android:text="KU Devdeep"
+        android:text="Hello Devdeep"
         android:textAlignment="center"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
