--- a/app/src/main/res/layout/activity_saving.xml
+++ b/app/src/main/res/layout/activity_saving.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context="devdeep.savinggrow.MainActivity">
-
+    tools:context="devdeep.savinggrow.SavingActivity">
 
 </LinearLayout>
