--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,282 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:background="@drawable/bgmain"
     tools:context="devdeep.savinggrow.MainActivity">
 
+    <!--shows characters-->
+    <RelativeLayout
+        android:id="@+id/layout_show_carecter"
+        android:layout_width="match_parent"
+        android:layout_height="330dp"
+        android:gravity="center_vertical|bottom"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="Year/Month/date"
+            android:inputType="none"
+            android:paddingRight="@dimen/edpadding_left"
+            android:textSize="@dimen/tvnum_size"
+            android:textColor="#ecb595"/>
+        <EditText
+            android:id="@+id/ed_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="Kunanon Konnarark"
+            android:inputType="none"
+            android:paddingLeft="@dimen/edpadding_left"
+            android:textSize="@dimen/tvnum_size"
+            android:textColor="#f9efe9"/>
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/island"
+            android:layout_width="350dp"
+            android:layout_height="250dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@color/white" />
+        <!-- insert image in this relative group-->
+        <RelativeLayout
+            android:id="@+id/laoutimg_status_avatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="54dp"
+            android:layout_centerHorizontal="true">
+//            sample of a saving
+            <!--<ImageView-->
+                <!--android:id="@+id/inagesamplestatus"-->
+                <!--android:layout_width="70dp"-->
+                <!--android:layout_height="70dp"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_marginTop="36dp"-->
+                <!--app:srcCompat="@drawable/egg" />-->
+        </RelativeLayout>
+
+        <!--just cloundset-->
+        <!--Use cloud1-->
+        <ImageView
+            android:id="@+id/clound1"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignTop="@+id/island"
+            android:layout_marginEnd="14dp"
+            android:layout_marginTop="8dp"
+            android:layout_toStartOf="@+id/laoutimg_status_avatar"
+            app:srcCompat="@color/blueincome"
+            />
+        <!--Use cloud2-->
+        <ImageView
+            android:id="@+id/clound2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/clound1"
+            android:layout_marginEnd="22dp"
+            android:layout_marginTop="47dp"
+            app:srcCompat="@color/blueincome"/>
+        <!--Use cloud2-->
+        <ImageView
+            android:id="@+id/clound3"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_below="@+id/clound2"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="12dp"
+            android:layout_toStartOf="@+id/clound2"
+            app:srcCompat="@color/blueincome"/>
+        <!--Use cloud1-->
+        <ImageView
+            android:id="@+id/clound4"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignStart="@+id/island"
+            android:layout_alignTop="@+id/clound3"
+            android:layout_marginTop="29dp"
+            app:srcCompat="@color/blueincome"/>
+    </RelativeLayout>
+
+
+    <!--shows status money-->
+    <LinearLayout
+        android:layout_below="@+id/layout_show_carecter"
+        android:id="@+id/layout_showstatus_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <!--//status stage and status balance-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="1.1"
+                android:layout_height="wrap_content"
+                android:text="stage"
+                android:layout_marginLeft="@dimen/edpadding_left"
+                android:textSize="@dimen/tvnum_size"
+                android:textColor="@color/white"
+                />
+            <!--stage-->
+            <EditText
+                android:id="@+id/ed_stage"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/edpadding_left"
+                android:textSize="@dimen/ednum_size"
+                android:textColor="@color/Black"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="BALANCE"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/edpadding_left"
+                android:textSize="@dimen/tvnum_size"
+                android:textColor="#ff6600"
+                />
+            <!--balance-->
+            <EditText
+                android:id="@+id/ed_balance"
+                android:layout_width="match_parent"
+                android:layout_weight="0.75"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/edpadding_left"
+                android:textSize="@dimen/ednum_size"
+                android:textColor="@color/Black"/>
+        </LinearLayout>
+        <!--//status total and status saving-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="1.2"
+                android:layout_height="wrap_content"
+                android:text="total"
+
+                android:layout_marginLeft="@dimen/edpadding_left"
+                android:textSize="@dimen/tvnum_size"
+                android:textColor="@color/white"
+                />
+            <!--total-->
+            <EditText
+                android:id="@+id/ed_total"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/edpadding_left"
+                android:textSize="@dimen/ednum_size"
+                android:textColor="@color/white"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="1.2"
+                android:layout_height="wrap_content"
+                android:text="SAVING"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/edpadding_left"
+                android:textSize="@dimen/tvnum_size"
+                android:textColor="#56ff85"
+                />
+            <!--saving-->
+            <EditText
+                android:id="@+id/ed_saving"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/edpadding_left"
+                android:textSize="@dimen/ednum_size"
+                android:textColor="@color/Black"/>
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <!--shows status saving , it's scroll bar-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_showstatus_money">
+
+        <LinearLayout
+        android:layout_below="@+id/layout_showstatus_money"
+        android:id="@+id/layout_show_status_saving"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+                <!--v a LinearLayout is a saving-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_margin="10dp">
+                    <ImageButton
+                        android:id="@+id/image_saving"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@mipmap/ic_app_saving_round" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <EditText
+                            android:id="@+id/name_saving"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="@dimen/tvnum_size"
+                            android:textColor="@color/Black"
+                            android:inputType="none"
+                            />
+                        <!--progressbarrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr-->
+                        <ProgressBar
+                            android:id="@+id/progressBar"
+                            style="@android:style/Widget.ProgressBar.Horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="20dp"
+                            android:layout_marginLeft="@dimen/edpadding_left"
+                            android:layout_marginRight="@dimen/edpadding_left"
+                            android:minHeight="50dip"
+                            android:progress="70"
+                            android:progressDrawable="@drawable/myprogressbar"/>
+                    </LinearLayout>
+                </LinearLayout>
+                <!--^ a LinearLayout is a saving-->
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <!--The button goes to main fragment-->
+    <Button
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="12dp"
+            android:id="@+id/btn_group"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:onClick="btn_group"
+            android:background="@mipmap/ic_app_saving"
+            style="@style/Widget.AppCompat.Button"
+            android:visibility="visible" />
+
+
+</RelativeLayout>
